--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
         <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
-            <!--Custom Js-->
+        <!--Custom Js-->
+    <script src="assets/script.js"></script>
 </body>
 </html>
