--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portofolio</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/script.js">
 
 </head>
 <body>
