mengganti link whatssapp

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="social-media">
                     <a href="https://www.facebook.com/ekosugyantobimantoro.1/"><i class='bx bxl-facebook'></i></a>
                     <a href="https://www.instagram.com/eko_sugianto_b/"><i class='bx bxl-instagram-alt'></i></a>
-                    <a href="https://wa.me/82211757388"><i class='bx bxl-whatsapp'></i></a>
+                    <a href="https://wa.me/+6282211757388"><i class='bx bxl-whatsapp'></i></a>
                     <a href="https://www.linkedin.com/eko-sugyanto-bimantoro-320258233/"><i class='bx bxl-linkedin' ></i></a>
                     </div>
                     <a href="assets/CV_2023101906025260 (1).pdf" class="btn">Download Cv</a>
