--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="https://www.facebook.com/ekosugyantobimantoro.1/"><i class='bx bxl-facebook'></i></a>
                     <a href="https://www.instagram.com/eko_sugianto_b/"><i class='bx bxl-instagram-alt'></i></a>
                     <a href="https://wa.me/+6282211757388"><i class='bx bxl-whatsapp'></i></a>
-                    <a href="https://www.linkedin.com/eko-sugyanto-bimantoro-320258233/"><i class='bx bxl-linkedin' ></i></a>
+                    <a href="https://www.linkedin.com/in/eko-sugyanto-bimantoro-320258233?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class='bx bxl-linkedin' ></i></a>
                     </div>
                     <a href="assets/CV_2023101906025260 (1).pdf" class="btn">Download Cv</a>
                 </div>
