menghapus file penting

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="https://wa.me/+6282211757388"><i class='bx bxl-whatsapp'></i></a>
                     <a href="https://www.linkedin.com/in/eko-sugyanto-bimantoro-320258233?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class='bx bxl-linkedin' ></i></a>
                     </div>
-                    <a href="assets/CV_2023101906025260 (1).pdf" class="btn">Download Cv</a>
+                    <a href="" class="btn">Download Cv</a>
                 </div>
                     <div class="beranda-img">
                         <img src="assets/IMG_20231005_011610-removebg-preview_prev_ui.png" alt="">
